# fell

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  table.fell  todo  umap.cc
.github/workflows/: cmake.yml  codeql.yml
cmake/: ProjectOptions.cmake
editor/: fell.vim
include/: api.hh  compiler.hh  debug.hh  error.hh  fell.hh  file.h  file.hh  lang.hh  lexer.hh  number.hh  override.hh  scanner.hh  std.hh  string.hh  table.hh  util.hh  variable.hh  vm.hh
scripts/: build.ps1  build.sh  run_fell_tests.ps1  run_lib_tests.ps1  test_compiler.ps1  test_runtime.ps1  test_scanner.ps1
src/: CMakeLists.txt  fell.cc  interpreter.cc  main.cc
src/api/: CMakeLists.txt  api.cc
src/compiler/: CMakeLists.txt  binary_operation.cc  compile.cc  constants.cc  expression.cc  operator_precedence.cc
src/debug/: CMakeLists.txt  compiler.cc  scanner.cc  vm_memory.cc
src/error/: CMakeLists.txt  error.cc
src/fell/: fell.cc
src/fell/var/: var.hh
src/fell/var/helpers/: concepts.hh  errors.hh  object.hh
src/fell/var/underlying/: underlying.hh
src/lang/: CMakeLists.txt  debug.cc  lang.cc
src/lexer/: CMakeLists.txt  expr.cc  func.cc  let.cc  lexer.cc  str.cc  string.cc  table.cc  variable.cc
src/scanner/: CMakeLists.txt  file.cc  number.cc  scanned.cc  string.cc  token.cc
src/std/: CMakeLists.txt  file.c  general.cc  io.cc  math.cc  params.cc  std.cc  table.cc
src/util/: CMakeLists.txt  args.cc  conv.cc  copy.cc  file.cc  override.cc  paren.cc  remove_comments.cc  trim.cc
src/variable/: CMakeLists.txt  arithmetic.cc  file.cc  func.cc  logical.cc  nihil.cc  number.cc  number.hh  string.cc  string.hh  table.cc  table.hh  variable.cc  variable.hh
src/vm/: CMakeLists.txt  call.cc  helpers.cc  stack.cc  vm.cc
tests/: array.fell  assert.fell  bad_access1.fell  bad_access2.fell  bad_access3.fell  comment.fell  equal.fell  extra.fell  extra1.fell  extra2.fell  extra3.fell  extra4.fell  extra5.fell  extra6.fell  fact.fell  failed_conversion.fell  fibonacci.fell  for_kv.fell  func1.fell  func10.fell  func11.fell  func2.fell  func4.fell  func6.fell  func7.fell  func8.fell  generator.fell  if.fell  indent.fell  invalid_def1.fell  invalid_def2.fell  invalid_def3.fell  invalid_def4.fell  invalid_def5.fell  invalid_def6.fell  invalid_def7.fell  invalid_def8.fell  keywords.fell  let.fell  missmatched_types1.fell  (+34 more)
tests/bad_access/: bad_access1.fell  bad_access2.fell
tests/compiler/: exposed_redefinition.fell
tests/compiler/empty/: empty1.fell  empty2.fell
tests/compiler/invalid_def/: invalid_def3.fell
tests/compiler/syntax/: syntax16.fell  syntax17.fell  syntax2.fell  syntax3.fell  syntax6.fell  syntax7.fell  syntax9.fell
tests/exposed/: exposed1.fell
tests/extra/: extra6.fell
tests/flow/: do.fell  do2.fell  do3.fell  if1.fell  if2.fell  if3.fell  while.fell  while1.fell
tests/func/: func1.fell  func10.fell  func11.fell  func12.fell  func2.fell  func3.fell  func4.fell  func5.fell  func6.fell  func7.fell  func8.fell  func9.fell
tests/general/: add.fell  comment.fell  context.fell  def.fell  indent.fell  local.fell  local2.fell  logical.fell  operator.fell  paren.fell  paren1.fell  str2.fell  str3.fell  unbalanced1.fell  unterminated1.fell  unterminated2.fell
tests/invalid_def/: invalid_def5.fell  invalid_def6.fell  invalid_def7.fell
tests/missmatch/: missmatch3.fell  missmatch4.fell
tests/missmatched_types/: missmatched_types4.fell
tests/module/: main.fell  mod.fell
tests/object/: object1.fell
tests/runtime/: exposed.fell  initialize_temp.fell
tests/runtime/flow/: flow1.fell  flow12.fell  flow13.fell  flow14.fell  flow15.fell  flow16.fell  flow2.fell  flow3.fell  flow4.fell  flow5.fell  flow6.fell  flow7.fell  flow8.fell  flow9.fell
tests/runtime/function/: function1.fell  function10.fell  function11.fell  function12.fell  function13.fell  function14.fell  function15.fell  function16.fell  function2.fell  function3.fell  function4.fell  function5.fell  function6.fell  function7.fell  function8.fell  function9.fell
tests/runtime/missmatch/: missmatch1.fell  missmatch2.fell  missmatch3.fell  missmatch4.fell
tests/runtime/module/: hello.fell  main.fell  mod.fell
tests/runtime/object/: object1.fell  object2.fell  object3.fell
tests/runtime/operation/: operation1.fell  operation2.fell  operation3.fell  operation4.fell  operation5.fell  operation6.fell  operation7.fell
tests/runtime/std/: assert_fell_impl.fell  conversion.fell  for_each.fell  insuf.fell  print.fell  protected.fell  tonumber.fell  type.fell
tests/runtime/std/math/: abs.fell  acos.fell  asin.fell  atan.fell  cos.fell  cosh.fell  ldfrexp.fell  log10.fell  max.fell  min.fell  minint.fell  pow.fell  sin.fell  sqrt.fell  tanh.fell
tests/scanner/number/: malformed1.fell
tests/scanner/string/: escaped_sequence1.fell  unterminated1.fell
tests/std/: assert.fell  assert_fell_impl.fell  conversion.fell  error.fell  for_each.fell  insuf.fell  protected.fell  protected_call.fell  read.fell  tonumber.fell  tostring.fell  type.fell
tests/std/math/: ceil.fell  exp.fell  floor.fell  fmod.fell  maxint.fell  modf.fell  random.fell  sinh.fell  tan.fell
tests/std_io/: file.txt  read.fell  stdin.fell  write.fell
tests/std_table/: concat.fell  insert.fell  move.fell  pack.fell  remove.fell  size.fell  sort.fell
tests/syntax/: string2.fell  syntax1.fell  unknown.fell
tests/table/: table3.fell  table7.fell
